カラーの追加

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,15 +39,15 @@
         android:id="@+id/imageView"
         android:layout_width="311dp"
         android:layout_height="348dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="48dp"
         android:src="@drawable/mimamoriko_chan2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/btnStart"
+    <TextView
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/title_blue"
