--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,75 +6,90 @@
     android:layout_height="match_parent"
     tools:context=".setting_activity.WelcomeActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="148dp"
-        android:layout_height="62dp"
-        android:layout_marginTop="32dp"
-        android:text="ようこそ"
-        android:textSize="34sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="163dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="40dp"
-        android:text="現在の禁止ワード"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="326dp"
-        android:layout_height="347dp"
-        android:layout_marginTop="32dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
     <Button
-        android:id="@+id/toAddActivity1"
+        android:id="@+id/returnButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
-        android:backgroundTint="@color/title_blue"
-        android:text="追加"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@android:color/transparent"
+        android:text="＜戻る"
+        android:textSize="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <!-- app:layout_constraintTop_toTopOf="parent" → 上端に固定
+    app:layout_constraintEnd_toEndOf="parent" → 右端に固定
+    （layout_constraintRight_toRightOf でもOK） -->
+    <Button
+        android:id="@+id/newUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@android:color/transparent"
+        android:text="新規登録"
+        android:textSize="20dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/toDeleteActivity1"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        app:layout_constraintVertical_bias="0.503" />
+        tools:ignore="InvalidId" />
 
-    <Button
-        android:id="@+id/toDeleteActivity1"
+    <!-- layout_constraintStart_toStartOf="parent"
+    & layout_constraintEnd_toEndOf="parent" → 左右中央揃え
+      android:layout_marginTop="20dp" を追加すると、さらに下に調整可能 -->
+    <TextView
+        android:id="@+id/loginText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="4dp"
-        android:backgroundTint="@color/title_blue"
-        android:text="削除"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="150dp"
+        android:text="ログイン"
+        android:textSize="50dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        app:layout_constraintVertical_bias="0.488" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!--app:layout_constraintStart_toStartOf="parent" と
+    app:layout_constraintEnd_toEndOf="parent" で、横方向の中央に配置。-->
+    <EditText
+        android:id="@+id/editUserName"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="250dp"
+        android:hint="ユーザー名"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
+
+    <EditText
+        android:id="@+id/editPassword"
+        android:layout_width="350dp"
+        android:layout_height="80dp"
+        android:hint="パスワード"
+        app:layout_constraintTop_toBottomOf="@id/editUserName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/backMainActivity"
+        android:id="@+id/loginButton"
+        android:layout_width="300dp"
+        android:layout_height="85dp"
+        android:backgroundTint="@android:color/transparent"
+        android:text="ログイン"
+        android:textSize="25dp"
+        app:layout_constraintTop_toBottomOf="@id/editPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/forgetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/title_blue"
-        android:text="戻る"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/toDeleteActivity1"
-        app:layout_constraintHorizontal_bias="0.231"
+        android:backgroundTint="@android:color/transparent"
+        android:text="パスワードを忘れた方はこちら"
+        android:textSize="15dp"
+        app:layout_constraintTop_toBottomOf="@id/loginButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        app:layout_constraintVertical_bias="0.503" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="InvalidId" />
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
