--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,7 +73,7 @@
         android:id="@+id/loginButton"
         android:layout_width="300dp"
         android:layout_height="85dp"
-        android:backgroundTint="@android:color/transparent"
+        android:backgroundTint="@color/gray"
         android:text="ログイン"
         android:textSize="25dp"
         app:layout_constraintTop_toBottomOf="@id/editPassword"
@@ -91,5 +91,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="InvalidId" />
-    
+
 </androidx.constraintlayout.widget.ConstraintLayout>
