--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,6 +73,7 @@
         android:id="@+id/loginButton"
         android:layout_width="300dp"
         android:layout_height="85dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/gray"
         android:text="ログイン"
         android:textSize="25dp"
