--- a/app/src/main/res/layout/edit_word.xml
+++ b/app/src/main/res/layout/edit_word.xml
@@ -23,22 +23,50 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:backgroundTint="@android:color/transparent"
-        android:text="編集＞"
+        android:text="完了"
         android:textSize="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="InvalidId" />
 
     <TextView
-        android:id="@+id/loginText"
+        android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:text="単語の登録・削除"
+        android:text="編集中"
         android:textSize="35dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/editText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="600dp">
+
+        <Button
+            android:id="@+id/logoutButton"
+            android:layout_width="150dp"
+            android:layout_height="75dp"
+            android:text="削除"
+            android:textSize="30dp"
+            android:layout_marginEnd="20dp"
+            android:backgroundTint="@color/gray"/>
+
+        <Button
+            android:id="@+id/deleteButton"
+            android:layout_width="150dp"
+            android:layout_height="75dp"
+            android:text="追加"
+            android:textSize="30dp"
+            android:backgroundTint="@color/gray" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -68,5 +96,7 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
     </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
